<resources>
    <string name="app_name">ToiletGame</string>

    <string name="Puissance4">Puissance 4</string>
    <string name="Puissance4_IA">Puissance 4: Joueur VS IA</string>
    <string name="Puissance4_1V1">Puissance 4: Joueur VS Joueur</string>
    <string name="newGame">Nouvelle partie</string>
    <string name="JoueurRouge">Au tour des rouges</string>
    <string name="JoueurJaune">Au tour des jaunes</string>
    <string name="regles">Règles</string>


    <string name="tetris">Tetris</string>
    <string name="score">Score:</string>

    <string name="Pendu">Pendu</string>
    <string name="Morpion">Morpion</string>
    <string name="NoWinner">Egalité</string>

    <string name="auTourDe">C\'EST AU TOUR DE : %1$s </string>
    <string name="Gagnant">%1$s a remporté la partie !"</string>

    <string name="Yams">Yathzee</string>
    <string name="send">Envoyer</string>
    <string name="rejouer">Rejouer</string>
    <string name="yathzee_rules_1">Le joueur lance les dés et à trois reprise. L\'objectif est alors de réaliser des combinaisons précises (listées ci-dessous), le joueur peut lancer tous les dés ou seulement quelques-uns pour parvenir à ses fins.</string>
    <string name="yathzee_rules_2">Après chaque lancer, le joueur peut inscrire le score réalisé dans l\'une des cases sur la feuille de scores. La combinaison réalisée est alors bloquée et il devra en réaliser \'autres par la suite.</string>
    <string name="yathzee_rules_3">Lorsque les combinaisons de la section I réalisent un total supérieur ou égal à 63 points, un bonus de 35 points est obtenu.</string>
</resources>
