<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TetrisActivity">

    <TextView
            android:text="@string/tetris"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Titre" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="64dp"
    />
    <TextView
            android:text="@string/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/score" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="28dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/Left"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/valeurScore"
            app:layout_constraintStart_toEndOf="@+id/score" android:layout_marginStart="24dp"
            app:layout_constraintTop_toTopOf="@+id/score"/>
    <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp" app:srcCompat="@drawable/yellowpawn"
            android:id="@+id/nextPiece"
            app:layout_constraintBottom_toTopOf="@+id/score"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toEndOf="@+id/Right" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/terrain"/>
    <Button
            android:text="Left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Left" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/nextPiece" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="Right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Right"
            app:layout_constraintTop_toTopOf="@+id/Left" android:layout_marginStart="17dp"
            app:layout_constraintStart_toEndOf="@+id/Left"/>
    <Button
            android:text="@string/rotate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Rotate"
            app:layout_constraintTop_toTopOf="@+id/nextPiece" android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/nextPiece"/>
    <GridView
            android:layout_width="395dp"
            android:numColumns="12"
            android:layout_height="511dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/NewGame" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:id="@+id/terrain"/>
    <Button
            android:text="@string/newGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/NewGame"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="64dp"/>
</android.support.constraint.ConstraintLayout>