<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RulesActivity">

    <ScrollView
            android:layout_width="395dp"
            android:layout_height="715dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:id="@+id/scrollView2">
        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:layout_height="wrap_content"
                                                     android:orientation="vertical" android:id="@+id/linearLayout2"
                                                     app:layout_constraintTop_toTopOf="@+id/button"
                                                     app:layout_constraintBottom_toTopOf="@+id/button">
            <TextView
                    android:text="Règles du Yathzee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/yathzeeRulesView" android:textSize="24sp"
                    android:fontFamily="@font/permanent_marker" android:textColor="@color/red"
                    tools:layout_conversion_absoluteHeight="39dp" tools:layout_conversion_absoluteWidth="105dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView3"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/yathzeeRulesView"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:textSize="14sp" android:text="@string/yathzee_rules_1"
                    android:fontFamily="@font/permanent_marker" android:textColor="@color/colorAccent"/>
            <TextView
                    android:text="@string/yathzee_rules_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:fontFamily="@font/permanent_marker" android:textColor="@color/colorAccent"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>
            <TextView
                    android:text="@string/yathzee_rules_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:fontFamily="@font/permanent_marker" android:textColor="@color/colorAccent"
                    android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>